--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,3 +1,8 @@
 <%- include('./components/header') -%>
-<div>HOME</div>
+<div>
+  <div class="row">
+    <div class="col-6">aaa</div>
+    <div class="col">bbb</div>
+  </div>
+</div>
 <%- include('./components/footer') -%>
