--- a/src/ejs/components/header.ejs
+++ b/src/ejs/components/header.ejs
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
 <meta name="keywords" content="">
 <script src="/assets/js/main.min.js"></script>
+<script src="/assets/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="/assets/css/main.min.css">
+<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 </head>
 <body>
   <div id="wrapper">
