--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -37,7 +37,7 @@ html {
 body {
   // line-height: 1;
   font-size: 18px;
-  color: #323232;
+  //color: #323232;
   margin: 0;
   padding: 0;
   font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
