--- a/src/ejs/components/header.ejs
+++ b/src/ejs/components/header.ejs
@@ -4,10 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
 <meta name="keywords" content="">
-<script src="/assets/js/main.min.js"></script>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="/assets/css/main.min.css">
-<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+<script src="../assets_lp/js/jquery-3.6.0.min.js"></script>
+<script src="../assets_lp/js/main.min.js"></script>
+<script src="../assets_lp/js/slick.min.js"></script>
+<link rel="stylesheet" href="../assets_lp/css/main.min.css">
+<link rel="stylesheet" href="../assets_lp/css/slick-theme.css">
+<link rel="stylesheet" href="../assets_lp/css/slick.css">
 </head>
 <body>
   <div id="wrapper">
