--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,8 +1,18 @@
 <%- include('./components/header') -%>
-<div>
-  <div class="row">
-    <div class="col-6">aaa</div>
-    <div class="col">bbb</div>
-  </div>
+<div style="text-align: center; padding: 100px;">
+  <ul>
+    <li style="margin-bottom: 40px;">
+      <a href="lp_g1/index.html">LP_G1</a>
+    </li>
+    <li style="margin-bottom: 40px;">
+      <a href="lp_g2/index.html">LP_G2</a>
+    </li>
+    <li style="margin-bottom: 40px;">
+      <a href="lp_g3/index.html">LP_G3</a>
+    </li>
+    <li style="margin-bottom: 40px;">
+      <a href="lp_g4/index.html">LP_G4</a>
+    </li>
+  </ul>
 </div>
 <%- include('./components/footer') -%>
