--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -9,7 +9,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 18px;
+  //font-size: 14px;
   font-weight: normal;
   vertical-align: baseline;
 }
@@ -24,19 +24,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 html {
-  font-size: 18px;
+  //font-size: 14px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   height: 100%;
 }
 @media screen and (min-width: 740px) {
   html {
-    font-size: 18px;
+    //font-size: 14px;
   }
 }
 
 body {
   // line-height: 1;
-  font-size: 18px;
+  //font-size: 14px;
   //color: #323232;
   margin: 0;
   padding: 0;
