--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -2,5 +2,55 @@ body {
     background-color: #fff !important;
     @include wide {
         background-color: #fff !important;
+        width: 100%;
+        max-width: 720px;
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
+}
+
+
+#adv{
+	position: relative;
+	z-index: 1;
+    background-image: url(../images/adv-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 786px;
+}
+
+#adv .prev-arrow{
+	position: absolute;
+	top: 62.166vw;
+	left: 1.944vw;
+	display: block;
+	width: 32px;
+	z-index: 52;
+}
+
+#adv .next-arrow{
+	position: absolute;
+	top: 62.166vw;
+	right: 1.388vw;
+	display: block;
+	width: 32px;
+	z-index: 52;
+}
+
+#adv ul.slider{
+	// position: absolute;
+	// top: 67.22vw;
+	// left: 0;
+	width: 100%;
+	z-index: 3;
+}
+
+#adv ul.slider .slick-list{
+	z-index: 5;
+}
+
+.slick-dots li {
+    width: 5px !important;
+    height: 5px !important;
+    margin: 0 5px !important;
 }
