--- a/src/ejs/lp_g1/index.ejs
+++ b/src/ejs/lp_g1/index.ejs
@@ -32,7 +32,7 @@
       <h1 class="black">人生設計コース</h1>
     </div>
     <h2 class="_strong _blue _x_large center num num1 mt8">全ての収入と支出をライフプランシミュレーションでまとめて見える化!</h2>
-    <div class="mt16">
+    <div class="mt16 center">
       <img src="../assets_lp/images/g1-sec-02-01.png" alt="">
     </div>
     <p class="mt16">
@@ -84,8 +84,8 @@
       <h1>オンアド3つの特徴</h1>
     </div>
     <div class="def-container">
-      <div>
-        <img src="../assets_lp/images/g1-sec-04-01.svg" alt="オンアド3つの特徴図">
+      <div class="center">
+        <img class="auto" src="../assets_lp/images/g1-sec-04-01.svg" alt="オンアド3つの特徴図">
       </div>
       <div class="line-box line-box-red mt32">
         <h2 class="bar-text bg-red">中立性</h2>
@@ -147,7 +147,7 @@
     <p class="mt16">
       お客さまが抱えているお悩みや課題についてお伺いし、お客さまに適したコースをご紹介いたします。
     </p>
-    <div class="mt16">
+    <div class="mt16 center">
       <img src="../assets_lp/images/g1-sec-05-03.png" alt="">
     </div>
   </div>
@@ -207,7 +207,7 @@
           <div class="padding-24">
             <hr class="mt16">
             <div class="flex-box mt16">
-              <div><img src="../assets_lp/images/g1-sec-07-01.svg" alt=""></div>
+              <div><img class="g1-sec-07-01" src="../assets_lp/images/g1-sec-07-01.svg" alt=""></div>
               <div class="spc-03">
                 <p class="_bold">現在の</p>
                 <p class="_2x_large _bold lineheight-1">資産状況がわかる</p>
@@ -215,7 +215,7 @@
             </div>
             <hr class="mt16">
             <div class="flex-box mt16">
-              <div><img src="../assets_lp/images/g1-sec-07-02.svg" alt=""></div>
+              <div><img class="g1-sec-07-01" src="../assets_lp/images/g1-sec-07-02.svg" alt=""></div>
               <div class="spc-03">
                 <p class="_bold">将来予想される</p>
                 <p class="_2x_large _bold lineheight-1">支出がわかる</p>
@@ -223,7 +223,7 @@
             </div>
             <hr class="mt16">
             <div class="flex-box mt16">
-              <div><img src="../assets_lp/images/g1-sec-07-03.svg" alt=""></div>
+              <div><img class="g1-sec-07-01" src="../assets_lp/images/g1-sec-07-03.svg" alt=""></div>
               <div class="spc-03">
                 <p class="_bold">家計が抱える</p>
                 <p class="_2x_large _bold lineheight-1">問題点がわかる！</p>
@@ -231,7 +231,7 @@
             </div>
             <hr class="mt16">
             <div class="flex-box mt16">
-              <div><img src="../assets_lp/images/g1-sec-07-04.svg" alt=""></div>
+              <div><img class="g1-sec-07-01" src="../assets_lp/images/g1-sec-07-04.svg" alt=""></div>
               <div class="spc-03">
                 <p class="_bold">問題の</p>
                 <p class="_2x_large _bold lineheight-1">解決方法がわかる！</p>
@@ -245,9 +245,9 @@
         </div>
       </div>
       <section>
-        <h3 class="center mt24"><img class="auto" src="../assets_lp/images/g1-sec-07-2step.svg" alt="2STEP"></h3>
+        <h3 class="center mt24"><img class="auto i2step" src="../assets_lp/images/g1-sec-07-2step.svg" alt="2STEP"></h3>
         <p class="_large _strong lineheight-23 center mt8">で納得のいく自分だけのプランを一緒に見つけましょう</p>
-        <div class="mt16">
+        <div class="mt16 center">
           <img src="../assets_lp/images/g1-sec-07-price.svg" alt="">
         </div>
         <p class="mt16 _note">
@@ -255,7 +255,7 @@
         </p>
         <div class="spc-04 mt24">
           <div>
-            <img class="auto" src="../assets_lp/images/g1-sec-07-step1.svg" alt="STEP1">
+            <img class="auto step1" src="../assets_lp/images/g1-sec-07-step1.svg" alt="STEP1">
           </div>
           <div class="border-box box-shadow">
             <div class="pad-container">
@@ -264,7 +264,7 @@
               <p class="mt8">
                 現在の資産や収支に関するご質問にご回答いただき、将来実現したいことをお聞かせください。<br>収入や支出、資産の残り方などを具体的に数値化した「将来のお金のシミュレーション表」をオーダーメイドにて作成いたします。
               </p>
-              <div class="mt8">
+              <div class="mt8 center">
                 <img src="../assets_lp/images/g1-sec-07-05.png" alt="">
               </div>
               <p class="_note">※画像はイメージです。</p>
@@ -279,7 +279,7 @@
         </div>
         <div class="spc-04 mt24">
           <div>
-            <img class="auto" src="../assets_lp/images/g1-sec-07-step2.svg" alt="STEP2">
+            <img class="auto step2" src="../assets_lp/images/g1-sec-07-step2.svg" alt="STEP2">
           </div>
           <div class="border-box box-shadow">
             <div class="pad-container">
@@ -323,10 +323,10 @@
               <li class="dum-checkbox">資産配分シミュレーション</li>
               <li class="dum-checkbox">面談の際に使用したアドバイス資料</li>
             </ul>
-            <div class="mt16">
+            <div class="mt16 center">
               <img src="../assets_lp/images/g1-sec-07-07.png" alt="">
             </div>
-            <div class="mt8">
+            <div class="mt8 center">
               <img src="../assets_lp/images/g1-sec-07-08.png" alt="">
             </div>
             <p class="_note mt8">
@@ -340,7 +340,7 @@
 </section>
 
 <section>
-  <div>
+  <div class="center">
     <img src="../assets_lp/images/button-click.png" alt="お金の無料相談ってよく見るけど 無料と有料の違いって何？">
   </div>
 </section>
@@ -495,6 +495,119 @@
       </div>
     </li>
   </ul>
+</section>
+
+<section id="sec-09">
+  <div class="sec-09 def-container">
+    <h1 class="_x2_large _bold center">オンアドとは</h1>
+    <div class="center mt24">
+      <img class="auto" src="../assets_lp/images/logo.svg" alt="オンアド">
+    </div>
+    <div class="flex-wrap-50 mt24">
+      <div class="center">
+        <img class="auto" src="../assets_lp/images/logo-nomura.svg" alt="NOMURA">
+      </div>
+      <div class="center">
+        <img class="auto" src="../assets_lp/images/logo-chibagin.svg" alt="ちばぎん">
+      </div>
+      <div class="center mt24">
+        <img class="auto" src="../assets_lp/images/logo-daiyon.svg" alt="第四北越銀行">
+      </div>
+      <div class="center mt24">
+        <img class="auto" src="../assets_lp/images/logo-chugoku.svg" alt="中国銀行">
+      </div>
+    </div>
+    <p class="mt48">
+      「オンライン」による「アドバイスに特化」した新しい金融コンサルティングサービスを提供するために、野村ホールディングス株式会社、株式会社千葉銀行、株式会社第四北越銀行、株式会社中国銀行が2022年1月14日に設立した合弁会社です。
+    </p>
+  </div>
+  <div class="center">
+    <img src="../assets_lp/images/g1-sec-09-01.png" alt="">
+  </div>
+  <section class="youtube">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/a6uNWEjuv0U?enablejsapi=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </section>
+</section>
+
+
+
+<section id="sec-10" class="mt8">
+  <div class="sec-10">
+    <h1 class="bar-text bg-green _x_large _bold lineheight-1">よくいただくご質問</h1>
+    <section id="v2_qa">
+      <div>
+        <dl>
+          <dt class="_large _bold">「とりあえず無料ガイダンスだけ」も可能ですか？</dt>
+          <dd>はい、喜んで承ります。<br>無料ガイダンスでオンアドのサービス内容についてしっかりとご説明させていただきます。</dd>
+          <dt class="_large _bold">相談内容が決まってなくても<br>相談できますか？</dt>
+          <dd>問題ありません。漠然としたお考えやご不安をお話しいただけることで、お客さまの課題が明確になっていきます。</dd>
+          <dt class="_large _bold">相談対応時間について教えてください。</dt>
+          <dd>
+            以下の時間でご対応しております。<br>
+            平日：10:00〜21:00（最終面談受付20:00）<br>
+            土日：9:00〜19:00（最終面談受付18:00）<br>
+            定休日：祝日
+          </dd>
+          <dt class="_large _bold">面談はどのくらいの時間が必要？</dt>
+          <dd>
+            面談1回の所要時間は、無料ガイダンスが45分程度、有料面談が60分でございます。<br>
+            ご相談回数は、お客さまのお悩み・ご相談内容によって変わってまいりますので、担当のアドバイザーがお客さま毎に必要なご相談回数をご案内させていただきます。
+          </dd>
+          <dt class="_large _bold">どんな相談ができますか？</dt>
+          <dd>
+            お客さまによってお悩みは様々です。<br>
+            退職後の家計収支、無理のない住宅ローン返済、お子様の教育資金準備、保険の見直し、相続対策など、オンアドでは人生のお金にまつわるあらゆるお悩みにワンストップでご相談を承っております。
+          </dd>
+        </dl>
+      </div>
+    </section>
+</section>
+
+
+
+
+<section>
+  <p class="_large _strong center mt16">
+      はじめてのオンライン面談でも大丈夫！
+    </p>
+    <p class="_strong _x_large center mt8">
+      当社アドバイザーが<br>オンライン面談の接続手続きを<br>丁寧にご案内します！
+    </p>
+    <div class="mt8">
+      <img class="full" src="../assets_lp/images/g1-sec-01-01.png" alt="">
+    </div>
+</section>
+
+
+
+
+<section id="sec-11" class="box-orange">
+  <div class="sec-11 center">
+    <p class="_strong _large _white">あなたのライフスタイルに合わせて、</p>
+    <p class="_strong _xxx_large mt8 _white"><span class="_yellow _strong _xxx_large">お金のプロ</span>が<br><span class="_yellow _strong _xxx_large">最適なプランをご提案</span></p>
+    <div class="box-white box-radius inner-box mt24">
+
+      <p class="center _x_large _strong">オンライン開催<br>アドバイザーと個別実施</p>
+
+      <div class="mt8">
+        <a href="mailto:support_onad@onad.co.jp?subject=【資料請求／問い合わせ】※資料請求の方はこのまま送信ください。お問い合わせの方は本文を記載の上、送信をお願いします。">
+          <img src="../assets_lp/images/button-free-guidence.svg" alt="無料ガイダンスを申込む">
+        </a>
+      </div>
+
+      <p class="center _x_large _strong mt8">まずはオンアドサービスについて</p>
+
+      <div class="mt8">
+        <a href="mailto:support_onad@onad.co.jp?subject=【資料請求／問い合わせ】※資料請求の方はこのまま送信ください。お問い合わせの方は本文を記載の上、送信をお願いします。">
+          <img src="../assets_lp/images/v2_005_but.png" alt="">
+        </a>
+      </div>
+
+      <p class="_note mt8 left">
+        ※オンアドサービスのご利用をご検討の方に向けて、個別での無料ガイダンスを開催しております。予約フォームよりご要望のお日にちを選択の上、お申し込みください。
+      </p>
+    </div>
+  </div>
 </section>
 
 <%- include('../components/footer') -%>
