--- a/src/ejs/components/footer.ejs
+++ b/src/ejs/components/footer.ejs
@@ -1,3 +1,51 @@
+            
+                <footer>
+                    <div class="footer">
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a href="https://www.onad.co.jp/guide/claim_and_adr/index.html">
+                                        苦情処理措置及び紛争解決措置
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.onad.co.jp/guide/privacy/index.html">
+                                        個人情報保護方針
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.onad.co.jp/guide/antisocial/index.html">
+                                        反社会的勢力への対応について
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.onad.co.jp/guide/inclusion_risk/index.html">
+                                        リスク・手数料等について
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.onad.co.jp/company/">
+                                        会社概要・お問い合わせ
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="copy-box">
+                            <div>
+                                <a href="https:www.onad.co.jp"><img class="auto" src="../assets_lp/images/logo-footer.svg" alt="オンアド"></a>
+                            </div>
+                            <div>
+                                <p>
+                                    株式会社オンアド 金融商品取引業者 関東財務局長（金商）第3322号<br>
+                                    加入協会／一般社団法人日本投資顧問業協会
+                                </p>
+                                <p class="mt8">
+                                    <img class="auto" src="../assets_lp/images/copyright.svg" alt="COPYRIGHT © ONAD CO.,LTD. ALL RIGHTS RESERVED.">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
             </div>
         </div>
     </div>
