--- a/src/sass/_mixin.scss
+++ b/src/sass/_mixin.scss
@@ -34,6 +34,7 @@ $font-serif: 'Noto Serif Japanese', serif, sans-serif;
 $font-sans: 'Noto Sans Japanese';
 $navy: #3778C8;
 $blue: #469BD4;
+$lightblue: #DDEDFB;
 $red: #F88487;
 $pink: #FDE2E3;
 $green: #94D753;
