--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -126,6 +126,90 @@ body {
 }
 
 
+.fixed-button-inner {
+	position: fixed;
+	bottom: -300px;
+	left: 0;
+	width: 100%;
+	z-index: 1000;
+	background-color: rgba(255,255,255,0.5);
+	-webkit-transition: bottom 0.3s linear;
+    text-align: center;
+    img {
+        width: 300px;
+    }
+}
+
+.fixed-button-inner.active {
+	bottom: 0;
+}
+
+@media screen and ( min-width:721px ){
+	.fixed-button-inner {
+		left: 50%;
+		width: 600px;
+		transform: translateX(-50%);
+	}
+}
+
+.overlay_f{
+    background: rgba(0,0,0,.6);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9997;
+}
+
+.what{
+	position: relative;
+	z-index: 15;
+}
+
+.what .what-open{
+	position: absolute;
+	top: 7.638vw;
+	left: 4.166%;
+	width: 91.666%;
+	z-index: 23;
+}
+
+.modal-what{
+	background: rgba(255,255,255,0);
+	margin: 0 auto;
+	position: fixed;
+	top: 3%;
+	left: 50%;
+	-webkit-transform: translate(-50%, 0);
+	transform: translate(-50%, 0);
+	width: 91.666vw;
+	max-height: 94%;
+	overflow-y: scroll;
+	z-index: 9998;
+}
+
+.what-close{
+	// position: fixed;
+	// top: 3%;
+	// right: 4.1vw;
+	// width: 20.27vw;
+	// cursor: pointer;
+	// z-index: 9999;
+    text-align: right;
+    img {
+        width: 17px;
+        height: auto;
+    }
+}
+
+.modal-what .what-container{
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+
 footer {
     .footer {
         nav {
